--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="../src/entry.client.js"></script>
   </body>
 </html>
