--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link role="icon" href="./favicon.ico"/>
+    <meta name="theme-color" content="#34a0c6" />
     <link rel="stylesheet" href="./style.css">
-    <title>React App</title>
+    <title>Weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
