--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link role="icon" href="./favicon.ico"/>
+    <link role="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="theme-color" content="#34a0c6" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
     <title>Weather App</title>
   </head>
   <body>
